# kakaotalk-trained-ai-chatbot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  PORTABLE_STATE.txt  README.md  pyproject.toml  requirements.txt
artifacts/: model_info.json  model_latest.pt
backups/v2_redesign_20260227_182958/configs/: sft.yaml
backups/v2_redesign_20260227_182958/src/chatbot/: sft_chat.py  sft_cpt_train.py  sft_infer.py  sft_ops.py  sft_preprocess.py  sft_train_pipeline.py  web_api.py
configs/: gen.yaml  paths.yaml  sft.noes.yaml  sft.refine.yaml  sft.yaml  train.yaml
docs/: ARCHITECTURE.md  CLEANUP.md  COMMANDS.md  RUNBOOK.md
docs/archive/: RUNBOOK_TOMORROW_2026-02-26.md
legacy/v1_from_scratch/: README.txt
legacy/v1_from_scratch/configs/: gen.yaml  train.yaml
legacy/v1_from_scratch/scripts/: decrypt_model.py  publish_model.ps1
legacy/v1_from_scratch/src/chatbot/: console.py  crypto_utils.py  inference.py  kakao_bridge.py  smoke.py  train.py
scripts/: encrypt_model.py  organize_raw.py  run.ps1  run.sh  run_quickstart.ps1  serve_latest.sh
src/chatbot/: __init__.py  archive_state.py  chat_cli.py  config.py  generate.py  inference.py  kakao_bridge.py  model.py  ops.py  organize_raw.py  preprocess.py  security.py  sft_bridge.py  sft_chat.py  sft_config.py  sft_cpt_train.py  sft_infer.py  sft_ops.py  sft_preprocess.py  sft_smoke.py  sft_train.py  text_postprocess.py  tokenizer.py  train.py
src/kakaotalk_room_bot.egg-info/: PKG-INFO
