[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kakaotalk-room-bot"
version = "0.1.0"
description = "Train a KakaoTalk room style chatbot from raw exported chat logs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch",
  "tqdm>=4.66",
  "PyYAML>=6.0",
  "pyautogui>=0.9.54",
  "pyperclip>=1.8.2",
  "pygetwindow>=0.0.9",
  "cryptography>=44.0",
  "transformers>=4.48.0",
  "peft>=0.14.0",
  "accelerate>=1.2.0",
  "datasets>=3.2.0",
  "safetensors>=0.4.5",
]

[project.scripts]
chatbot-ops = "chatbot.sft_ops:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
